foundations for new houses

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img id="meadowsweet" src="imgs/meadowsweet.png">
             <img id="bracken" src="imgs/bracken.png">
             <img id="ferns" src="imgs/ferns.png">
-            <img id="ground" src="imgs/floor2.jpg">
+            <img id="ground" src="imgs/floor.jpg">
             <img id="cloud0" src="imgs/cloud0.png">
             <img id="cloud1" src="imgs/cloud1.png">
             <img id="fence" src="imgs/fence.png">
@@ -45,127 +45,7 @@
         <!-- <a-plane color="#6C792F" height="150" width="150" position="0 -0.01 0" rotation="-90 0 0"></a-plane> -->
         <!-- <a-entity laser-controls="hand: left"></a-entity> -->
 
-        <!--HOUSE STRUCTURE-->
-        <a-entity>
-            <a-entity position="-4.847 3.105 -5.214" rotation="-82.964 115.508 -84.626" geometry="primitive:cylinder;height:4;radius:0.16"  material="src:#wood2"></a-entity>
-            <a-entity position="-5.889 3.663 -6.111" rotation="31.513 10.084 -115.967" geometry="radius:0.14;height:2;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-4.753 3.663 -3.708" rotation="31.513 10.094 -115.947" geometry="radius:0.14;height:2;primitive:cylinder"  material="src:#wood2"></a-entity>
-            <a-entity position="-7.482 3.623 -5.368" rotation="34.664 40.852 -62.682" geometry="radius:0.14;height:2;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-6.326 3.683 -2.963" rotation="34.664 40.852 -62.682" geometry="radius:0.14;height:2;primitive:cylinder"  material="src:#wood2"></a-entity>
-            <a-entity position="-6.71 4.209 -5.687" rotation="-82.954 110.409 -84.626" geometry="height:6.5;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-7.485 3.125 -3.84" rotation="-82.964 110.409 -84.626" geometry="radius:0.16;height:4;primitive:cylinder"  material="src:#wood2"></a-entity>
-            <a-entity position="-13.253 4.097 -8.695" rotation="-68.52575229764645 -36 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-12.522 4.097 -7.939" rotation="-68.52575229764645 -18 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood2"></a-entity>
-            <a-entity position="-13.808 4.097 -9.552" rotation="-68.526 -54 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-14.071 4.097 -10.557" rotation="-68.52575229764645 -72 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood2"></a-entity>
-            <a-entity position="-13.974 4.097 -11.58" rotation="-68.526 -90 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-13.555 4.097 -12.541" rotation="-68.526 -108 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood2"></a-entity>
-            <a-entity position="-12.862 4.097 -13.334" rotation="-68.526 -126 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-11.978 4.097 -13.865" rotation="-68.526 -144 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood2"></a-entity>
-            <a-entity position="-10.94 4.097 -14.045" rotation="-68.526 198 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-9.867 4.097 -13.931" rotation="-68.526 180 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood2"></a-entity>
-            <a-entity position="-8.879 4.097 -13.545" rotation="-68.526 162 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-8.155 4.097 -12.853" rotation="-68.566 144 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood2"></a-entity>
-            <a-entity position="-7.65 4.097 -11.975" rotation="-68.526 126 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-7.418 4.097 -10.964" rotation="-68.526 108 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood2"></a-entity>
-            <a-entity position="-7.442 4.096 -9.947" rotation="-68.526 90 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-7.878 4.087 -9.009" rotation="-68.526 72 0" geometry="primitive:cylinder;height:7;radius:0.1"  material="src:#wood2"></a-entity>
-            <a-entity position="-8.567 4.097 -8.224" rotation="-68.52575229764645 54 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-9.47 4.097 -7.709" rotation="-68.526 36 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-10.517 4.097 -7.503" rotation="-68.526 18 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-11.535 4.097 -7.558" rotation="-68.52575229764645 0 0" geometry="height:7;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-4.647 1.51 -4.64" geometry="radius:0.32;height:3;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-7.216 1.51 -3.358" geometry="radius:0.3;height:3;primitive:cylinder"  material="src:#wood2"></a-entity>
-            <a-entity position="-6.746 2.986 -5.695" rotation="91 -64.5 0" geometry="primitive:cylinder;height:2.9;radius:0.1"  material="src:#wood1"></a-entity>
-            <a-entity position="-14.908 3.028 -13.21" rotation="89.03764136332994 -24.350706293059986 0" geometry="radius:0.22;height:2.7;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-9.844 3.028 -5.695" rotation="89.028 90.144 0" geometry="height:2.4;radius:0.22;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-12.329 3.028 -6.287" rotation="89.038 64.859 0" geometry="height:2.79;radius:0.22;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-14.582 3.028 -9.398" rotation="89.03764136332994 19.48056503444799 0" geometry="primitive:cylinder;height:5.2;radius:0.25"  material="src:#wood1"></a-entity>
-            <a-entity position="-11.706 3.038 -15.243" rotation="89.038 -73.281 0" geometry="height:5.2;radius:0.25;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-7.555 3.008 -15.226" rotation="89.038 -118.144 0" geometry="height:3.4;radius:0.22;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-5.543 3.008 -12.582" rotation="89.03764136332994 -164.3242956435201 0" geometry="height:3.6;radius:0.22;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-5.471 3.008 -9.09" rotation="89.038 163.35 0" geometry="radius:0.22;height:3.5;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-7.218 2.965 -6.454" rotation="89.038 119.93 0" geometry="radius:0.25;height:3.2;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-5.966 2.909 -3.996" rotation="89.038 117.227 0" geometry="radius:0.07;height:3.2;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-7.655 1.157 -4.645" rotation="36.268 166.158 -24.006931615981493" geometry="primitive:cylinder;height:4;radius:0.1"  material="src:#wood1"></a-entity>
-            <a-entity position="-5.405 1.558 -5.942" rotation="36.268 172.46 -24" geometry="height:4;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-5.405 1.558 -5.942" rotation="36.268 172.46 -24" geometry="height:4;radius:0.1;primitive:cylinder"  material="src:#wood2"></a-entity>
-            <a-entity position="-6.354 3.001 -4.959" rotation="91 -65.5 0" geometry="height:2.9;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-5.053 1.51 -5.551" geometry="primitive:cylinder;height:3;radius:0.12" material="src:#wood1"></a-entity>
-            <a-entity position="-5.463 1.51 -6.3" geometry="primitive:cylinder;height:3;radius:0.12"  material="src:#wood2"></a-entity>
-            <a-entity position="-7.645 1.51 -4.372" geometry="radius:0.12;height:3;primitive:cylinder"  material="src:#wood2"></a-entity>
-            <a-entity position="-8.038 1.51 -5.074" geometry="radius:0.1;height:3;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-8.374 1.51 -5.781" geometry="radius:0.37;height:3;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-6.05 1.51 -7.148" geometry="radius:0.4;height:3;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-5.016 1.51 -10.725" geometry="radius:0.27;height:3;primitive:cylinder"  material="src:#wood2"></a-entity>
-            <a-entity position="-6.053 1.51 -14.307" geometry="radius:0.28;height:3;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-8.922 1.51 -15.915" geometry="radius:0.4;height:3;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-14.231 1.51 -14.39" geometry="radius:0.34;height:3;primitive:cylinder"  material="src:#wood2"></a-entity>
-            <a-entity position="-15.488 1.51 -11.841" geometry="radius:0.355;height:3;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-13.675 1.51 -6.958" geometry="radius:0.35;height:3;primitive:cylinder"  material="src:#wood2"></a-entity>
-            <a-entity position="-11.017 1.51 -5.659" geometry="radius:0.3;height:3;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-10.464 4.072 -14.625" rotation="-82.9642887349432 -175.382381089545 -84.6258663408226" geometry="height:1.5;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-8.102 3.942 -14.093" rotation="-82.9642887349432 144 -84.6258663408226" geometry="height:1.5;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-6.63 3.87 -11.933" rotation="-82.9642887349432 104.56479761137524 -84.6258663408226" geometry="height:1.5;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <a-entity position="-6.727 3.927 -9.302" rotation="-82.9642887349432 72 -84.6258663408226" geometry="height:1.5;radius:0.1;primitive:cylinder"  material="src:#wood2"></a-entity>
-            <a-entity position="-8.413 4.072 -7.376" rotation="-82.9642887349432 35.867157975189535 -84.6258663408226" geometry="primitive:cylinder;height:1.5;radius:0.1"  material="src:#wood1"></a-entity>
-            <a-entity position="-10.915 4.072 -7.142" rotation="-82.9642887349432 0.40107045659157625 -84.6258663408226" geometry="primitive:cylinder;height:1.5;radius:0.1"  material="src:#wood1"></a-entity>
-            <a-entity position="-12.974 4.182 -8.139" rotation="-82.9642887349432 -35.17960862103254 -84.6258663408226" geometry="primitive:cylinder;height:1.5;radius:0.1"  material="src:#wood1"></a-entity>
-            <a-entity position="-14.155 4.146 -9.973" rotation="-82.9642887349432 -71.16135815524825 -84.6258663408226" geometry="primitive:cylinder;height:1.5;radius:0.1"  material="src:#wood1"></a-entity>
-            <a-entity position="-14.118 4.072 -12.15" rotation="-82.9642887349432 -109.43493886998723 -84.6258663408226" geometry="primitive:cylinder;height:1.5;radius:0.1"  material="src:#wood1"></a-entity>
-            <a-entity position="-12.635 4.072 -13.819" rotation="-82.9642887349432 -143.98429391637586 -84.6258663408226" geometry="height:1.5;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
-            <!--ROOF-->
-            <a-entity position="-10.655 4.165 -10.691" id="roof" geometry="height:2.36;openEnded:true;radiusBottom:7;radiusTop:0.85;primitive:cone" material="src:#wall1;side:double"></a-entity>
-            <a-image src="#wall1" width="1" height="2" position="-5.417 3.837 -5.046" rotation="-66.52040001468858 115.10722104178238 -178.30446584471218" scale="5 1.2 1" material="repeat:0.5 1"></a-image>
-            <a-image src="#wall1" width="1" height="2" position="-6.996 3.84 -4.273" rotation="-70.47380880109125 -64.91611818832227 -0.5729577951308232" scale="5 1.2 1" material="repeat:0.5 1"></a-image>
-            <!--FIRE-->
-            <!-- <a-entity position="-9.68 0 -10.928" id="fire" particle-system="accelerationValue:0.2 0.2 0.2;velocitySpread:0.2 0.2 0.2;velocityValue:0.2 0.2 0.2;accelerationSpread:0.2 0.2 0.2;maxAge:5;type:3;color:#ff0000, #ffff00;particleCount:10;texture:/imgs/cloud0.png;opacity:0.5"></a-entity> -->
-            <!--WALLS-->
-            <a-entity id="outerwall" position="-10.244 1.487 -11.097" geometry="primitive:cylinder;height:3.06;openEnded:true;radius:5.38;thetaLength:330" rotation="0 49.9 0" material="src:#wall1;repeat:4,3"></a-entity>
-            <a-entity id="innerwall" position="-10.244 1.487 -11.097" geometry="thetaStart:-1;thetaLength:330;primitive:cylinder;height:3.06;openEnded:true;radius:5.38" rotation="0 -164.9 180" material="src:#wall1;repeat:4,3" scale="-1 -1 -1"></a-entity>
-            <a-image src="#wall1" width="1" height="2" position="-5.087 1.541 -5.982" rotation="0 -60.38975160678877 0" scale="2.8 1.66 1" material="repeat:0.5 1"></a-image>
-            <a-image src="#wall1" width="1" height="2" position="-7.801 1.541 -4.273" rotation="0 -60.38975160678877 0" scale="2.8 1.66 1" material="repeat:.5 1"></a-image>
-        </a-entity>
-        <!--ENCLOSURE-->
-        <a-image src="#fence" width="1.5" height="1" position="0.046 0.508 -16.573" rotation="0 70.76028769865667 0"></a-image>
-        <a-image src="#fence" width="1.5" height="1" position="-0.339 0.584 -14.623" rotation="0 85.65719037205808 0" scale="1.3 1 1"></a-image>
-        <a-image src="#fence" width="1.5" height="1" position="1.115 0.571 -17.704" rotation="0 25.324734544782388 0" scale="1.2 1 1"></a-image>
-        <a-image src="#fence" width="1.5" height="1" position="2.823 0.439 -18.244" scale="1.2 1 1"></a-image>
-        <a-image src="#fence" width="1.5" height="1" position="4.718 0.577 -18.258" scale="1.4 1 1" material="" geometry=""></a-image>
-        <a-image src="#fence" width="1.5" height="1" position="7.006 0.521 -18.267" scale="1.5 1 1"></a-image>
-        <a-image src="#fence" width="1.5" height="1" position="9.479 0.579 -18.013" rotation="0 -5.901465289847479 0" scale="1.7 1 1"></a-image>
-        <a-image src="#fence" width="1.5" height="1" position="11.927 0.531 -17.465" rotation="0 -21.257 0" scale="1.5 1 1"></a-image>
-        <a-image src="#fence" width="1.5" height="1" position="13.838 0.546 -16.457" rotation="0 -35.9817495342157 0" scale="1.3 1 1"></a-image>
-        <a-image src="#fence" width="1.5" height="1" position="14.629 0.522 -13.931" rotation="0 89.89707805602616 0" scale="2.4 1 1"></a-image>
-        <a-image src="#fence" width="1.5" height="1" position="12.264 0.495 -9.874" rotation="0 26.12687545796554 0" scale="1.4 1 1"></a-image>
-        <a-image src="#fence" width="1.5" height="1" position="13.899 0.504 -11.226" rotation="0 55.00394833255903 0" scale="1.4 1 1"></a-image>
-        <a-image src="#fence" width="1.5" height="1" position="10.144 0.558 -9.276" rotation="0 5.557690612768986 0" scale="1.6 1 1"></a-image>
-        <a-image src="#fence" width="1.5" height="1" position="7.788 0.528 -9.018" rotation="0 6.7609019825437136 0" scale="1.4 1 1"></a-image>
-        <a-image src="#fence" width="1.5" height="1" position="5.636 0.51 -8.936" rotation="0 1.604281826366305 0" scale="1.4 1 1"></a-image>
-        <a-image src="#fence" width="1.5" height="1" position="3.402 0.487 -9.135" rotation="0 -12.547775713365029 0" scale="1.591 1 1"></a-image>
-        <a-image src="#fence" width="1.5" height="1" position="1.456 0.487 -9.975" rotation="0 -37.81521447863433 0" scale="1.2 1 1"></a-image>
-
-        <a-entity position="6.699 0.5 -8.972" geometry="radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>        
-        <a-entity position="4.514 0.538 -8.907" geometry="radius:0.13;height:1.1;primitive:cylinder" material="src:#wood1"></a-entity>
-        <a-entity position="2.273 0.477 -9.471" geometry="height:0.97;radius:0.135;primitive:cylinder" material="src:#wood2"></a-entity>
-        <a-entity position="2.273 0.477 -9.462" geometry="primitive:cylinder;height:0.97;radius:0.135" material="src:#wood2"></a-entity>
-        <a-entity position="0.778 0.59 -10.532" geometry="height:1.2;radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>
-        <a-entity position="-0.452 0.607 -13.59" geometry="height:1.25;radius:0.15;primitive:cylinder" material="src:#wood1"></a-entity>
-        <a-entity position="14.562 0.735 -12.128" geometry="radius:0.1;height:1.5;primitive:cylinder" material="src:#wood1"></a-entity>
-        <a-entity position="14.874 0.607 -14.179" geometry="radius:0.11;height:1.25;primitive:cylinder" material="src:#wood1"></a-entity>
-        <a-entity position="13.249 0.538 -10.382" geometry="height:1.1;radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>
-        <a-entity position="11.289 0.746 -9.418" geometry="radius:0.1;height:1.5;primitive:cylinder" material="src:#wood1"></a-entity>
-        <a-entity position="8.877 0.746 -9.197" geometry="radius:0.12;height:1.5;primitive:cylinder" material="src:#wood2"></a-entity>
-        <a-entity position="-0.221 0.543 -15.711" geometry="height:1.1;radius:0.16;primitive:cylinder" material="src:#wood1"></a-entity>
-        <a-entity position="0.343 0.678 -17.378" geometry="height:1.4;radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>
-        <a-entity position="1.901 0.495 -18.153" geometry="radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>
-        <a-entity position="3.683 0.567 -18.333" geometry="height:1.2;radius:0.14;primitive:cylinder" material="src:#wood1"></a-entity>
-        <a-entity position="5.817 0.489 -18.313" geometry="radius:0.12;primitive:cylinder" material="src:#wood2"></a-entity>
-        <a-entity position="8.18 0.664 -18.243" geometry="height:1.3;radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>
-        <a-entity position="14.611 0.664 -15.797" geometry="primitive:cylinder;height:1.3;radius:0.12" material="src:#wood2"></a-entity>
-        <a-entity position="10.836 0.511 -17.886" geometry="radius:0.11;height:1.1;primitive:cylinder" material="src:#wood1"></a-entity>
-        <a-entity position="13.042 0.477 -17.093" geometry="radius:0.1;primitive:cylinder" material="src:#wood2"></a-entity>
-
+        
     </a-scene>
     </body>
 
