new enclosure + house base

--- a/index.html
+++ b/index.html
@@ -49,6 +49,38 @@
         <!-- <a-plane color="#6C792F" height="150" width="150" position="0 -0.01 0" rotation="-90 0 0"></a-plane> -->
         <!-- <a-entity laser-controls="hand: left"></a-entity> -->
 
+        <!--HOUSES-->
+        <a-entity position="-10.39 0 -10.764" rotation="90.01166961505233 23.49126960036375 0" geometry="arc:70;radiusTubular:0.38;radius:6;primitive:torus" material=""></a-entity>
+        <a-entity position="-8.819 0 -10.936" rotation="90.01166961505233 84.51127478179643 0" geometry="arc:60;radius:4.5;radiusTubular:0.38;primitive:torus" material=""></a-entity>
+        <a-entity position="-8.41 0 -8.702" rotation="90.01166961505233 157.16232320438482 0" geometry="arc:30;radius:6.8;radiusTubular:0.38;primitive:torus" material=""></a-entity>
+        <a-entity position="-10.634 0 -10.209" rotation="90.01166961505233 -169.42362002018442 0" geometry="radius:4.17;arc:30;radiusTubular:0.38;primitive:torus" material=""></a-entity>
+        <a-entity position="-3.989 0 -11.805" rotation="90.01166961505233 -148.22418160034397 0" geometry="radius:11;arc:20;radiusTubular:0.38;primitive:torus" material=""></a-entity>
+        <a-entity position="-5.997 0 -11.261" rotation="90.01166961505233 -135.84829322551818 0" geometry="arc:15;radius:9;radiusTubular:0.38;primitive:torus" material=""></a-entity>
+        <a-entity position="-8.819 0 -9.406" rotation="90.01166961505233 131.03544774641927 0" geometry="primitive:torus;arc:55;radius:6;radiusTubular:0.38" material=""></a-entity>
+        <a-entity position="-11.255 0 -11.299" rotation="90.01166961505233 -38.44546805327824 0" geometry="arc:38;radius:7;radiusTubular:0.38;primitive:torus" material=""></a-entity>
+        <a-entity position="-12.419 0 -4.954" geometry="radius:0.76;primitive:sphere" material=""></a-entity>
+        <a-entity position="-9.643 0 -4.495" geometry="primitive:sphere;radius:0.76" material=""></a-entity>
+        <!--ENCLOSURE-->
+        <a-entity position="-16.614 0.493 17.095" geometry="height:1.23;radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>
+        <a-entity position="-14.726 0.596 17.883" geometry="radius:0.135;height:1.2;primitive:cylinder" material="src:#wood2"></a-entity>
+        <a-entity position="-17.342 0.596 15.65" geometry="radius:0.13;height:1.3599999999999999;primitive:cylinder" material="src:#wood1"></a-entity>
+        <a-entity position="-17.631 0.596 13.567" geometry="radius:0.12;height:1.3199999999999998;primitive:cylinder" material="src:#wood2"></a-entity>
+        <a-entity position="-16.901 0.596 11.511" geometry="height:1.2599999999999998;radius:0.13;primitive:cylinder" material="src:#wood1"></a-entity>
+        <a-entity position="-15.29 0.596 10.037" geometry="radius:0.12;height:1.2599999999999998;primitive:cylinder" material="src:#wood2"></a-entity>
+        <a-entity position="-13.053 0.596 9.102" geometry="height:1.1699999999999997;radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>
+        <a-entity position="-11.02 0.596 8.285" geometry="radius:0.14;height:1.1899999999999997;primitive:cylinder" material="src:#wood2"></a-entity>
+        <a-entity position="-8.957 0.596 7.579" geometry="radius:0.13;height:1.2199999999999998;primitive:cylinder" material="src:#wood1"></a-entity>
+        <a-entity position="-6.648 0.596 7.456" geometry="radius:0.15;height:1.1599999999999997;primitive:cylinder" material="src:#wood2"></a-entity>
+        <a-entity position="-4.922 0.688 8.062" geometry="height:1.4099999999999997;radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>
+        <a-entity position="-2.856 0.629 10.607" geometry="height:1.3399999999999996;radius:0.19;primitive:cylinder" material="src:#wood2"></a-entity>
+        <a-entity position="-2.452 0.596 12.702" geometry="height:1.1599999999999997;radius:0.17;primitive:cylinder" material="src:#wood1"></a-entity>
+        <a-entity position="-2.508 0.596 14.458" geometry="height:1.1899999999999997;radius:0.13;primitive:cylinder" material="src:#wood2"></a-entity>
+        <a-entity position="-5.412 0.571 16.37" geometry="radius:0.13;height:1.2;primitive:cylinder" material="src:#wood1"></a-entity>
+        <a-entity position="-7.455 0.571 16.949" geometry="primitive:cylinder;height:1.2;radius:0.14" material="src:#wood2"></a-entity>
+        <a-entity position="-9.727 0.571 17.563" geometry="radius:0.13;height:1.2;primitive:cylinder" material="src:#wood1"></a-entity>
+        <a-entity position="-3.768 0.596 15.649" geometry="primitive:cylinder;height:1.1899999999999997;radius:0.13" material="src:#wood2"></a-entity>
+        <a-entity position="-12.393 0.671 18.007" geometry="height:1.4299999999999997;radius:0.13;primitive:cylinder" material="src:#wood1"></a-entity>
+
         
     </a-scene>
     </body>
