--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- <a-plane color="#6C792F" height="150" width="150" position="0 -0.01 0" rotation="-90 0 0"></a-plane> -->
         <!-- <a-entity laser-controls="hand: left"></a-entity> -->
 
-        <!--HOUSES-->
+        <!--SMALL HOUSE BASE-->
         <a-entity position="-10.39 0 -10.764" rotation="90.01166961505233 23.49126960036375 0" geometry="arc:70;radiusTubular:0.38;radius:6;primitive:torus" material=""></a-entity>
         <a-entity position="-8.819 0 -10.936" rotation="90.01166961505233 84.51127478179643 0" geometry="arc:60;radius:4.5;radiusTubular:0.38;primitive:torus" material=""></a-entity>
         <a-entity position="-8.41 0 -8.702" rotation="90.01166961505233 157.16232320438482 0" geometry="arc:30;radius:6.8;radiusTubular:0.38;primitive:torus" material=""></a-entity>
@@ -80,8 +80,28 @@
         <a-entity position="-9.727 0.571 17.563" geometry="radius:0.13;height:1.2;primitive:cylinder" material="src:#wood1"></a-entity>
         <a-entity position="-3.768 0.596 15.649" geometry="primitive:cylinder;height:1.1899999999999997;radius:0.13" material="src:#wood2"></a-entity>
         <a-entity position="-12.393 0.671 18.007" geometry="height:1.4299999999999997;radius:0.13;primitive:cylinder" material="src:#wood1"></a-entity>
-
-        
+        <!--SMALL HOUSE WALLS-->
+        <a-entity position="-11.135 1.09 -11.148" rotation="0 6.990085100596043 0" geometry="height:3;thetaLength:45;radius:7;openEnded:true;primitive:cylinder" material="src:#wall1"></a-entity>
+        <a-entity position="-10.396 1.09 -10.48" rotation="0 51.2224268846956 0" geometry="thetaLength:65;radius:6;height:3;openEnded:true;primitive:cylinder" material="src:#wall1"></a-entity>
+        <a-entity position="-8.951 1.09 -10.94" rotation="0 117.9147142379234 0" geometry="thetaLength:50;radius:4.5;height:3;openEnded:true;primitive:cylinder" material="src:#wall1"></a-entity>
+        <a-entity position="-8.951 1.09 -9.416" rotation="0 170.1684651538545 0" geometry="thetaLength:50;radius:6;height:3;openEnded:true;primitive:cylinder" material="src:#wall1"></a-entity>
+        <a-entity position="-8.55 1.09 -8.708" rotation="0 -141.80705429487875 0" geometry="thetaLength:30;radius:6.8;height:3;openEnded:true;primitive:cylinder" material="src:#wall1"></a-entity>
+        <a-entity position="-8.55 1.09 -8.708" rotation="0 -112.01324894807594 0" scale="-1 1 1" geometry="thetaLength:32;radius:6.8;height:3;openEnded:true;primitive:cylinder" material="src:#wall1"></a-entity>
+        <a-entity position="-8.951 1.09 -9.416" rotation="0 -141.978941633418 0" scale="-1 1 1" geometry="primitive:cylinder;height:3;openEnded:true;radius:6;thetaLength:50" material="src:#wall1"></a-entity>
+        <a-entity position="-8.951 1.09 -10.94" rotation="0 165.0118449976771 0" scale="-1 1 1" geometry="primitive:cylinder;height:3;openEnded:true;radius:4.5;thetaLength:50" material="src:#wall1"></a-entity>
+        <a-entity position="-10.396 1.09 -10.48" rotation="0 114.99262948275623 0" scale="-1 1 1" geometry="primitive:cylinder;height:3;openEnded:true;radius:6;thetaLength:65" material="src:#wall1"></a-entity>
+        <a-entity position="-11.135 1.09 -11.148" rotation="0 51.738088900313336 0" scale="-1 1 1" geometry="primitive:cylinder;height:3;openEnded:true;radius:7;thetaLength:45" material="src:#wall1"></a-entity>
+        <a-entity position="-10.780000000000001 1.09 -10.346" rotation="0 -102.50214954890427 0" geometry="radius:4.17;thetaLength:30;height:3;openEnded:true;primitive:cylinder" material="src:#wall1"></a-entity>
+        <a-entity position="-10.79 1.09 -10.346" rotation="0 -102.50214954890427 0" geometry="primitive:cylinder;height:3;openEnded:true;radius:4.17;thetaLength:30" material="src:wall1"></a-entity>
+        <a-entity position="-10.79 1.09 -10.346" rotation="0 -70.0154425649866 0" scale="-1 1 1" geometry="thetaLength:35;primitive:cylinder;height:3;openEnded:true;radius:4.17" material="src:#wall1"></a-entity>  
+        <a-entity position="-4.121 1.09 -11.913" rotation="0 -55 0" scale="-1 1 1" geometry="primitive:cylinder;height:3;openEnded:true;radius:11;thetaLength:20" material="src:#wall1"></a-entity>
+        <a-entity position="-10.79 1.09 -10.346" rotation="0 -71.23 0" geometry="thetaLength:32;primitive:cylinder;height:3;openEnded:true;radius:4.17" material="src:#wall1" scale="-1 1 1"></a-entity>  
+        <a-entity position="-4.131 1.09 -11.913" rotation="0 -75.45854161872941 0" geometry="thetaLength:20;radius:11;height:3;openEnded:true;primitive:cylinder" material="src:#wall1"></a-entity>
+        <a-entity position="-5.842 1.09 -10.884" rotation="0 -43.61 0" scale="-1 1 1" geometry="primitive:cylinder;height:3;openEnded:true;radius:9;thetaLength:13" material="src:#wall1"></a-entity>
+        <a-entity position="-5.842 1.09 -10.884" rotation="0 -56.550934379412254 0" geometry="thetaLength:13;radius:9;height:3;openEnded:true;primitive:cylinder" material="src:#wall1"></a-entity>
+        <!--SMALL HOUSE POSTS-->
+        <a-entity position="-10.474 1.143 -4.229" geometry="primitive:cylinder;height:2.5;radius:0.2" material="src:#wood1"></a-entity>
+        <a-entity position="-11.853 1.143 -4.359" geometry="radius:0.2;height:2.5;primitive:cylinder" material="src:#wood2"></a-entity>       
     </a-scene>
     </body>
 
