--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <img id="wood2" src="imgs/wood2.jpg">
             <img id="wall2" src="imgs/wattle-wall.png">
             <img id="brown" src="imgs/brown.png">
+            <img id="roof" src="imgs/roof.png">
             <img id="cow1" src="imgs/cow1.png">
             <a-asset-item id="roof1" src="models/roof.gltf">  
             <audio id="ambient" src="audio/ambient.mp3" preload="auto" loop="true"></audio>
@@ -321,7 +322,7 @@
         <a-entity position="-10.432 4.223 -9.631" rotation="83.93831698666561 176.9866629159113 168.44959176846203" geometry="primitive:cylinder;height:0.971;radius:0.03" material="src:#wood1"></a-entity>
         <a-entity position="-9.957 4.498 -10.485" rotation="87.54795109598979 94.88181087366432 149.25550563157944" geometry="primitive:cylinder;height:0.6;radius:0.03" material="src:#wood2"></a-entity>
         <!--turf-->
-        <a-gltf-model src="#roof1" position="-9.556 1.88 -10.125"></a-gltf-model>
+        <a-gltf-model src="#roof1" position="-9.556 1.88 -10.125" material="src:#roof"></a-gltf-model>
 <!--small house door-->
         <a-entity position="-11.765 1.156 -3.691" rotation="-5.042028597151244 -57.3530752925954 -0.17188733853924698" geometry="depth:0.06;height:2.2" material="src:#wall2"></a-entity>
 <!--big house posts-->
