--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
             <img id="brown" src="imgs/brown.png">
             <img id="roof" src="imgs/roof.png">
             <img id="cow1" src="imgs/cow1.png">
-            <a-asset-item id="roof1" src="models/roof.gltf">  
+            <a-asset-item id="roof1" src="models/roof.gltf"></a-asset-item>
+            <a-asset-item id="ava" src="models/ava.glb"></a-asset-item>
             <audio id="ambient" src="audio/ambient.mp3" preload="auto" loop="true"></audio>
         </a-assets>
         <a-entity>
@@ -70,6 +71,8 @@
         <a-sky src="#bg" theta-start="-2"></a-sky>
         <a-plane src="#ground" height="40" width="40" position="0 0 0" rotation="-90 0 0" material="transparency:true;"></a-plane>
   
+        <a-gltf-model src="#ava" position="0 .96 0" scale="5 5 5"></a-gltf-model>
+        <a-gltf-model src="#roof2" position="0 0 0" scale="5 5 5"></a-gltf-model>
         <!--cows-->
         <a-entity position="-14.475 1.014 14.604" geometry="depth:0;height:2.31;width:2.5" material="transparent:true;src:#cow1" look-at="#cam"></a-entity>
 
